k8s/apps/media/ganymede/release.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ganymede
  labels:
    app: ganymede
spec:
  selector:
    matchLabels:
      app: ganymede
  template:
    metadata:
      labels:
        app: ganymede
        np-internet: allow # for download
        np-internal: allow # for oidc
        np-postgres: allow
        np-ingress-controller-web: allow
        np-metrics: allow
      annotations:
        prometheus.io/path: "/metrics"
        prometheus.io/port: "4000"
        prometheus.io/scrape: "true"
    spec:
      containers:
        - name: ganymede
          image: ghcr.io/zibbp/ganymede:latest
          ports:
            - name: web
              containerPort: 4000
          volumeMounts:
            - mountPath: /logs
              name: ganymede-logs
            - mountPath: /data
              name: ganymede-data
              subPath: cfg/
            - mountPath: /vods
              name: ganymede-data
              subPath: vods/
        - name: ganymede-front
          image: ghcr.io/zibbp/ganymede-frontend:latest
          ports:
            - name: gmd-front
              containerPort: 3000
        - name: nginx
          image: nginx:latest
          ports:
            - name: gmd-cdn
              containerPort: 8080
          volumeMounts:
            - mountPath: /mnt/vods
              name: ganymede-data
              subPath: vods/
            - mountPath: /etc/nginx/nginx.conf
              name: ganymede-nginx-config
              subPath: nginx.conf

      volumes:
        - name: ganymede-data
          persistentVolumeClaim:
            claimName: ganymede-data
        - name: ganymede-logs
          emptyDir: {}
        - name: ganymede-nginx-config
          configMap:
            name: ganymede-nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: ganymede
spec:
  ports:
    - protocol: TCP
      name: web
      port: 4000
    - protocol: TCP
      name: gmd-front
      port: 3000
    - protocol: TCP
      name: gmd-cdn
      port: 8080
  selector:
    app: ganymede
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ganymede
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gmd.REDACTED`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: ganymede
          port: 4000
    - match: Host(`gmd.REDACTED`)
      kind: Rule
      services:
        - name: ganymede
          port: 3000
    - match: Host(`gmd.REDACTED`) && PathPrefix(`/vods`)
      kind: Rule
      services:
        - name: ganymede
          port: 8080
  tls:
    secretName: REDACTED-cert
