k8s/apps/media/ganymede/policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ganymede-traefik-in
spec:
  podSelector:
    matchLabels:
      app: ganymede
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: gmd-cdn
        - protocol: TCP
          port: gmd-front
